# mcdd-data-structure-study

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: demo01.md
mcdd/: main.c  mcdd.c  mcdd.h  mcdd.json
src/demo/book/: b-6-10.c  b-6-11.c  b-6-12.c  b-6-13.c
src/demo/c/: c-demo01.c  c-demo02.c
src/demo/structure/: s-demo02.c
